added CSS formatting to mortar/ninja/sniper html files via adding relevant class attributes

--- a/ninja.html
+++ b/ninja.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -58,102 +60,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Ninja Discipline</th>
-                    <th>Sharp Shurikens</th>
-                    <th>Double Shot</th>
-                    <th>Bloonjitsu</th>
-                    <th>Grandmaster Ninja</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$350</td>
-                    <td>$350</td>
-                    <td>$900</td>
-                    <td>$2,750</td>
-                    <td>$35,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Ninja Discipline</th>
+                        <th class="top_row">Sharp Shurikens</th>
+                        <th class="top_row">Double Shot</th>
+                        <th class="top_row">Bloonjitsu</th>
+                        <th class="top_row">Grandmaster Ninja</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$350</td>
+                        <td>$350</td>
+                        <td>$900</td>
+                        <td>$2,750</td>
+                        <td>$35,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Distraction</th>
+                        <th class="top_row">Counter-Espionage</th>
+                        <th class="top_row">Shinobi Tactics</th>
+                        <th class="top_row">Bloon Sabotage</th>
+                        <th class="top_row">Grand Saboteur</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$250</td>
+                        <td>$400</td>
+                        <td>$1,200</td>
+                        <td>$5,200</td>
+                        <td>$22,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Distraction</th>
-                    <th>Counter-Espionage</th>
-                    <th>Shinobi Tactics</th>
-                    <th>Bloon Sabotage</th>
-                    <th>Grand Saboteur</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$250</td>
-                    <td>$400</td>
-                    <td>$1,200</td>
-                    <td>$5,200</td>
-                    <td>$22,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Seeking Shuriken</th>
-                    <th>Caltrops</th>
-                    <th>Flash Bomb</th>
-                    <th>Sticky Bomb</th>
-                    <th>Master Bomber</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$300</td>
-                    <td>$450</td>
-                    <td>$2,250</td>
-                    <td>$5,000</td>
-                    <td>$40,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Seeking Shuriken</th>
+                        <th class="top_row">Caltrops</th>
+                        <th class="top_row">Flash Bomb</th>
+                        <th class="top_row">Sticky Bomb</th>
+                        <th class="top_row">Master Bomber</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$300</td>
+                        <td>$450</td>
+                        <td>$2,250</td>
+                        <td>$5,000</td>
+                        <td>$40,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="magic tower_heading">
