--- a/sniper.html
+++ b/sniper.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -58,102 +60,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Full Metal Jacket</th>
-                    <th>Large Calibre</th>
-                    <th>Deadly Precision</th>
-                    <th>Main MOAB</th>
-                    <th>Cripple MOAB</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$350</td>
-                    <td>$1,300</td>
-                    <td>$2,500</td>
-                    <td>$6,000</td>
-                    <td>$32,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Full Metal Jacket</th>
+                        <th class="top_row">Large Calibre</th>
+                        <th class="top_row">Deadly Precision</th>
+                        <th class="top_row">Main MOAB</th>
+                        <th class="top_row">Cripple MOAB</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$350</td>
+                        <td>$1,300</td>
+                        <td>$2,500</td>
+                        <td>$6,000</td>
+                        <td>$32,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Night Vision Goggles</th>
+                        <th class="top_row">Shrapnel Shot</th>
+                        <th class="top_row">Bouncing Bullet</th>
+                        <th class="top_row">Supply Drop</th>
+                        <th class="top_row">Elite Sniper</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$250</td>
+                        <td>$450</td>
+                        <td>$2,100</td>
+                        <td>$7,600</td>
+                        <td>$12,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Night Vision Goggles</th>
-                    <th>Shrapnel Shot</th>
-                    <th>Bouncing Bullet</th>
-                    <th>Supply Drop</th>
-                    <th>Elite Sniper</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$250</td>
-                    <td>$450</td>
-                    <td>$2,100</td>
-                    <td>$7,600</td>
-                    <td>$12,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Fast Firing</th>
-                    <th>Even Faster Firing</th>
-                    <th>Semi-Automatic</th>
-                    <th>Full Auto Rifle</th>
-                    <th>Elite Defender</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$450</td>
-                    <td>$450</td>
-                    <td>$2,700</td>
-                    <td>$4,100</td>
-                    <td>$14,900</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Fast Firing</th>
+                        <th class="top_row">Even Faster Firing</th>
+                        <th class="top_row">Semi-Automatic</th>
+                        <th class="top_row">Full Auto Rifle</th>
+                        <th class="top_row">Elite Defender</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$450</td>
+                        <td>$450</td>
+                        <td>$2,700</td>
+                        <td>$4,100</td>
+                        <td>$14,900</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="military tower_heading">
