--- a/mortar.html
+++ b/mortar.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -58,102 +60,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Bigger Blast</th>
-                    <th>Bloon Buster</th>
-                    <th>Shell Shock</th>
-                    <th>The Big One</th>
-                    <th>The Biggest One</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$500</td>
-                    <td>$500</td>
-                    <td>$825</td>
-                    <td>$7,200</td>
-                    <td>$36,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Bigger Blast</th>
+                        <th class="top_row">Bloon Buster</th>
+                        <th class="top_row">Shell Shock</th>
+                        <th class="top_row">The Big One</th>
+                        <th class="top_row">The Biggest One</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$500</td>
+                        <td>$500</td>
+                        <td>$825</td>
+                        <td>$7,200</td>
+                        <td>$36,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Faster Reload</th>
+                        <th class="top_row">Rapid Reload</th>
+                        <th class="top_row">Heavy Shells</th>
+                        <th class="top_row">Artillery Battery</th>
+                        <th class="top_row">Pop and Awe</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$300</td>
+                        <td>$500</td>
+                        <td>$900</td>
+                        <td>$6,500</td>
+                        <td>$38,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Faster Reload</th>
-                    <th>Rapid Reload</th>
-                    <th>Heavy Shells</th>
-                    <th>Artillery Battery</th>
-                    <th>Pop and Awe</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$300</td>
-                    <td>$500</td>
-                    <td>$900</td>
-                    <td>$6,500</td>
-                    <td>$38,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Increased Accuracy</th>
-                    <th>Burny Stuff</th>
-                    <th>Signal Flare</th>
-                    <th>Shattering Shells</th>
-                    <th>Blooncineration</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$200</td>
-                    <td>$500</td>
-                    <td>$1,000</td>
-                    <td>$9,500</td>
-                    <td>$40,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Increased Accuracy</th>
+                        <th class="top_row">Burny Stuff</th>
+                        <th class="top_row">Signal Flare</th>
+                        <th class="top_row">Shattering Shells</th>
+                        <th class="top_row">Blooncineration</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$200</td>
+                        <td>$500</td>
+                        <td>$1,000</td>
+                        <td>$9,500</td>
+                        <td>$40,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="military tower_heading">
