added CSS formatting to spikefactory/sub/super html files via adding relevant class attributes

--- a/spikefactory.html
+++ b/spikefactory.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -58,102 +60,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Bigger Stacks</th>
-                    <th>White Hot Spikes</th>
-                    <th>Spiked Balls</th>
-                    <th>Spiked Mines</th>
-                    <th>Super Mines</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$800</td>
-                    <td>$600</td>
-                    <td>$2,300</td>
-                    <td>$9,500</td>
-                    <td>$125,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Bigger Stacks</th>
+                        <th class="top_row">White Hot Spikes</th>
+                        <th class="top_row">Spiked Balls</th>
+                        <th class="top_row">Spiked Mines</th>
+                        <th class="top_row">Super Mines</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$800</td>
+                        <td>$600</td>
+                        <td>$2,300</td>
+                        <td>$9,500</td>
+                        <td>$125,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Faster Production</th>
+                        <th class="top_row">Even Faster Production</th>
+                        <th class="top_row">MOAB SHREDR</th>
+                        <th class="top_row">Spike Storm</th>
+                        <th class="top_row">Carpet of Spikes</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$600</td>
+                        <td>$800</td>
+                        <td>$2,500</td>
+                        <td>$7,000</td>
+                        <td>$41,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Faster Production</th>
-                    <th>Even Faster Production</th>
-                    <th>MOAB SHREDR</th>
-                    <th>Spike Storm</th>
-                    <th>Carpet of Spikes</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$600</td>
-                    <td>$800</td>
-                    <td>$2,500</td>
-                    <td>$7,000</td>
-                    <td>$41,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Long Reach</th>
-                    <th>Smart Spikes</th>
-                    <th>Long Life Spikes</th>
-                    <th>Deadly Spikes</th>
-                    <th>Perma-spike</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$150</td>
-                    <td>$400</td>
-                    <td>$1,300</td>
-                    <td>$3,600</td>
-                    <td>$30,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Long Reach</th>
+                        <th class="top_row">Smart Spikes</th>
+                        <th class="top_row">Long Life Spikes</th>
+                        <th class="top_row">Deadly Spikes</th>
+                        <th class="top_row">Perma-spike</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$150</td>
+                        <td>$400</td>
+                        <td>$1,300</td>
+                        <td>$3,600</td>
+                        <td>$30,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="support tower_heading">
