--- a/sub.html
+++ b/sub.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -58,102 +60,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Longer Range</th>
-                    <th>Advanced Intel</th>
-                    <th>Submerge and Support</th>
-                    <th>Bloontonium Reactor</th>
-                    <th>Energizer</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$130</td>
-                    <td>$500</td>
-                    <td>$700</td>
-                    <td>$2,300</td>
-                    <td>$28,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Longer Range</th>
+                        <th class="top_row">Advanced Intel</th>
+                        <th class="top_row">Submerge and Support</th>
+                        <th class="top_row">Bloontonium Reactor</th>
+                        <th class="top_row">Energizer</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$130</td>
+                        <td>$500</td>
+                        <td>$700</td>
+                        <td>$2,300</td>
+                        <td>$28,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Barbed Darts</th>
+                        <th class="top_row">Heat-tipped Darts</th>
+                        <th class="top_row">Ballistic Missile</th>
+                        <th class="top_row">First Strike Capability</th>
+                        <th class="top_row">Pre-emptive Strike</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$450</td>
+                        <td>$300</td>
+                        <td>$1,350</td>
+                        <td>$13,000</td>
+                        <td>$29,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Barbed Darts</th>
-                    <th>Heat-tipped Darts</th>
-                    <th>Ballistic Missile</th>
-                    <th>First Strike Capability</th>
-                    <th>Pre-emptive Strike</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$450</td>
-                    <td>$300</td>
-                    <td>$1,350</td>
-                    <td>$13,000</td>
-                    <td>$29,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Twin Guns</th>
-                    <th>Airburst Darts</th>
-                    <th>Triple Guns</th>
-                    <th>Armor Piercing Darts</th>
-                    <th>Sub Commander</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$450</td>
-                    <td>$1,000</td>
-                    <td>$1,100</td>
-                    <td>$2,500</td>
-                    <td>$25,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Twin Guns</th>
+                        <th class="top_row">Airburst Darts</th>
+                        <th class="top_row">Triple Guns</th>
+                        <th class="top_row">Armor Piercing Darts</th>
+                        <th class="top_row">Sub Commander</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$450</td>
+                        <td>$1,000</td>
+                        <td>$1,100</td>
+                        <td>$2,500</td>
+                        <td>$25,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="military tower_heading">
