--- a/super.html
+++ b/super.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -58,102 +60,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Laser Blasts</th>
-                    <th>Plasma Blasts</th>
-                    <th>Sun Avatar</th>
-                    <th>Sun Temple</th>
-                    <th>True Sun God</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$2,000</td>
-                    <td>$2,500</td>
-                    <td>$20,000</td>
-                    <td>$100,000</td>
-                    <td>$500,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Laser Blasts</th>
+                        <th class="top_row">Plasma Blasts</th>
+                        <th class="top_row">Sun Avatar</th>
+                        <th class="top_row">Sun Temple</th>
+                        <th class="top_row">True Sun God</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$2,000</td>
+                        <td>$2,500</td>
+                        <td>$20,000</td>
+                        <td>$100,000</td>
+                        <td>$500,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Super Range</th>
+                        <th class="top_row">Epic Range</th>
+                        <th class="top_row">Robo Monkey</th>
+                        <th class="top_row">Tech Terror</th>
+                        <th class="top_row">The Anti-Bloon</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$1,500</td>
+                        <td>$1,900</td>
+                        <td>$7,500</td>
+                        <td>$25,000</td>
+                        <td>$70,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Super Range</th>
-                    <th>Epic Range</th>
-                    <th>Robo Monkey</th>
-                    <th>Tech Terror</th>
-                    <th>The Anti-Bloon</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$1,500</td>
-                    <td>$1,900</td>
-                    <td>$7,500</td>
-                    <td>$25,000</td>
-                    <td>$70,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Knockback</th>
-                    <th>Ultravision</th>
-                    <th>Dark Knight</th>
-                    <th>Dark Champion</th>
-                    <th>Legend of the Night</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$3,000</td>
-                    <td>$1,200</td>
-                    <td>$5,600</td>
-                    <td>$55,555</td>
-                    <td>$165,650</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Knockback</th>
+                        <th class="top_row">Ultravision</th>
+                        <th class="top_row">Dark Knight</th>
+                        <th class="top_row">Dark Champion</th>
+                        <th class="top_row">Legend of the Night</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$3,000</td>
+                        <td>$1,200</td>
+                        <td>$5,600</td>
+                        <td>$55,555</td>
+                        <td>$165,650</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="magic tower_heading">
